--- a/trunk/ch.jester.db.hsqldb/plugin.xml
+++ b/trunk/ch.jester.db.hsqldb/plugin.xml
@@ -5,7 +5,7 @@
          point="ch.jester.hibernate.helper.Configuration">
       <Configuration
             DatabaseManagerClass="ch.jester.db.hsqldb.HSQLDatabaseManager"
-            JDBCDriverClass="com.hsqldb.jdbcDriver"
+            JDBCDriverClass="org.hsqldb.jdbcDriver"
             SQLDialectClass="org.hibernate.dialect.HSQLDialect"
             Subprotocol="hsqldb">
       </Configuration>
