--- a/ch.jester.db.hsqldb/build.properties
+++ b/ch.jester.db.hsqldb/build.properties
@@ -1,3 +1,4 @@
 bin.includes = META-INF/,\
                hsqldb.jar,\
-               plugin.xml
+               plugin.xml,\
+               src/
