--- a/trunk/ch.jester.hibernate/build.properties
+++ b/trunk/ch.jester.hibernate/build.properties
@@ -15,4 +15,8 @@ bin.includes = META-INF/,\
                cglib-2.2.jar,\
                javassist-3.12.0.GA.jar,\
                hibernate-testing.jar,\
-               slf4j-jdk14-1.6.1.jar
+               slf4j-jdk14-1.6.1.jar,\
+               hibernate-validator-4.1.0.Final.jar,\
+               log4j-1.2.14.jar,\
+               validation-api-1.0.0.GA.jar,\
+               slf4j-api-1.6.1.jar
