--- a/ch.jester.hibernate/.classpath
+++ b/ch.jester.hibernate/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="slf4j-api-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="hibernate-validator-4.1.0.Final.jar"/>
+	<classpathentry exported="true" kind="lib" path="log4j-1.2.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="validation-api-1.0.0.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="slf4j-jdk14-1.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
