--- a/ch.jester.common.test/build.properties
+++ b/ch.jester.common.test/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/IImportHandlerProvider.xml
+               OSGI-INF/IImportHandlerProvider.xml,\
+               plugin.xml
 source.. = src/
