--- a/trunk/ch.jester.rcpapplication/plugin.xml
+++ b/trunk/ch.jester.rcpapplication/plugin.xml
@@ -45,6 +45,7 @@
       <menuContribution
             locationURI="menu:org.eclipse.ui.main.menu">
          <menu
+               id="menu.file"
                label="File">
             <command
                   commandId="org.eclipse.ui.file.exit"
