--- a/trunk/ch.jester.common.test/build.properties
+++ b/trunk/ch.jester.common.test/build.properties
@@ -4,3 +4,4 @@ bin.includes = META-INF/,\
                OSGI-INF/IImportHandlerProvider.xml,\
                plugin.xml
 source.. = src/
+additional.bundles = ch.jester.hibernate
