--- a/trunk/ch.jester.db.hsqldb/build.properties
+++ b/trunk/ch.jester.db.hsqldb/build.properties
@@ -1,4 +1,4 @@
 bin.includes = META-INF/,\
-               hsqldb.jar,\
+               lib/hsqldb.jar,\
                plugin.xml,\
                src/
