--- a/trunk/ch.jester.model/build.properties
+++ b/trunk/ch.jester.model/build.properties
@@ -3,3 +3,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .
 bin.excludes = META-INF/.svn/
+additional.bundles = ch.jester.hibernate
