--- a/ch.jester.common/build.properties
+++ b/ch.jester.common/build.properties
@@ -1,4 +1,8 @@
-source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .
+bin.includes = META-INF/
+jars.compile.order = .,\
+                     javax.persistence.jar
+src.includes = hibernate-jpa-2.0-api-1.0.0.Final.jar,\
+               validation-api-1.0.0.GA.jar,\
+               javax.persistence.jar
+output.javax.persistence.jar = bin/
