--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -1,6 +1,5 @@
 bin.includes = META-INF/,\
                hibernate3.jar,\
-               hibernate-jpa-2.0-api-1.0.0.Final.jar,\
                antlr-2.7.6.jar,\
                commons-collections-3.1.jar,\
                dom4j-1.6.1.jar,\
@@ -20,3 +19,4 @@ bin.includes = META-INF/,\
                log4j-1.2.14.jar,\
                validation-api-1.0.0.GA.jar,\
                slf4j-api-1.6.1.jar
+jars.compile.order = 
