--- a/trunk/ch.jester.site/buckminster_w64.properties
+++ b/trunk/ch.jester.site/buckminster_w64.properties
@@ -5,6 +5,6 @@ buckminster.temp.root=${user.home}/tmp/buildtmp
 # How .qualifier in versions should be replaced
 qualifier.replacement.*=generator:lastRevision
 
-target.os=win32
+target.os=win64
 target.ws=win32
-target.arch=x86
+target.arch=x86_64
