--- a/trunk/ch.jester.common/build.properties
+++ b/trunk/ch.jester.common/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
-bin.includes = META-INF/
+bin.includes = META-INF/,\
+               bin/
 jars.compile.order = .,\
                      javax.persistence.jar
 src.includes = hibernate-jpa-2.0-api-1.0.0.Final.jar,\
