--- a/ch.jester.commonservices.impl/build.properties
+++ b/ch.jester.commonservices.impl/build.properties
@@ -1,6 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/ILoggingFactoryProvider.xml,\
-               OSGI-INF/IImportManagerProvider.xml
+               OSGI-INF/,\
+               bin/
 source.. = src/
