--- a/trunk/ch.jester.common/build.properties
+++ b/trunk/ch.jester.common/build.properties
@@ -1,2 +1,5 @@
-bin.includes = META-INF/
-jars.compile.order = javax.persistence.jar
+output.. = bin/
+bin.includes = META-INF/,\
+               .,
+jars.compile.order = .
+source.. = src/
