--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -1,21 +1,24 @@
 bin.includes = META-INF/,\
-               hibernate3.jar,\
                antlr-2.7.6.jar,\
+               c3p0-0.9.1.jar,\
+               cglib-2.2.jar,\
                commons-collections-3.1.jar,\
                dom4j-1.6.1.jar,\
-               jta-1.1.jar,\
-               c3p0-0.9.1.jar,\
                ehcache-1.5.0.jar,\
+               hibernate-jpa-2.0-api-1.0.0.Final.jar,\
+               hibernate-testing.jar,\
+               hibernate-validator-4.1.0.Final.jar,\
+               hibernate3.jar,\
                infinispan-core-4.2.1.CR1.jar,\
+               javassist-3.12.0.GA.jar,\
                jbosscache-core-3.2.1.GA.jar,\
+               jta-1.1.jar,\
+               log4j-1.2.14.jar,\
                oscache-2.1.jar,\
                proxool-0.8.3.jar,\
-               swarmcache-1.0RC2.jar,\
-               cglib-2.2.jar,\
-               javassist-3.12.0.GA.jar,\
-               hibernate-testing.jar,\
+               slf4j-api-1.6.1.jar,\
                slf4j-jdk14-1.6.1.jar,\
-               hibernate-validator-4.1.0.Final.jar,\
-               log4j-1.2.14.jar,\
-               validation-api-1.0.0.GA.jar,\
-               slf4j-api-1.6.1.jar
+               swarmcache-1.0RC2.jar,\
+               validation-api-1.0.0.GA.jar
+jars.compile.order = .
+
