--- a/trunk/ch.jester.db.hsqldb/build.properties
+++ b/trunk/ch.jester.db.hsqldb/build.properties
@@ -1,4 +1,7 @@
 bin.includes = META-INF/,\
-               lib/hsqldb.jar,\
                plugin.xml,\
-               src/
+               hsqldb.jar
+jars.compile.order = .
+source.. = src
+output..=bin
+
