--- a/trunk/ch.jester.hibernate/build.properties
+++ b/trunk/ch.jester.hibernate/build.properties
@@ -19,6 +19,10 @@ bin.includes = META-INF/,\
                slf4j-api-1.6.1.jar,\
                slf4j-jdk14-1.6.1.jar,\
                swarmcache-1.0RC2.jar,\
-               validation-api-1.0.0.GA.jar
+               validation-api-1.0.0.GA.jar,\
+               src/
 jars.compile.order = .
+source.. = src
+output..=bin
+
 
