--- a/ch.jester.rcpapplication/build.properties
+++ b/ch.jester.rcpapplication/build.properties
@@ -5,4 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               plugin_de.properties,\
+               plugin.properties
