--- a/ch.jester.rcpapplication/plugin.xml
+++ b/ch.jester.rcpapplication/plugin.xml
@@ -22,7 +22,7 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            name="View"
+            name="%DBConnectionView"
             class="ch.jester.rcpapplication.View"
             id="ch.jester.rcpapplication.view">
       </view>
@@ -30,7 +30,7 @@
             category="org.eclipse.ui"
             class="org.eclipse.ui.ExtensionFactory:progressView"
             id="org.eclipse.ui.views.ProgressView"
-            name="Progress View"
+            name="%ProgressView"
             restorable="false">
       </view>
    </extension>
@@ -64,10 +64,10 @@
             locationURI="menu:org.eclipse.ui.main.menu">
          <menu
                id="menu.file"
-               label="File">
+               label="%File">
             <command
                   commandId="org.eclipse.ui.file.exit"
-                  label="Exit">
+                  label="%Exit">
             </command>
          </menu>
       </menuContribution>
@@ -88,7 +88,7 @@
          </property>
          <property
                name="startupProgressRect"
-               value="10,295,475,15">
+               value="10,295,480,15">
          </property>
          <property
                name="preferenceCustomization"
