--- a/trunk/ch.jester.db.hsqldb/build.properties
+++ b/trunk/ch.jester.db.hsqldb/build.properties
@@ -1,6 +1,8 @@
 bin.includes = META-INF/,\
                plugin.xml,\
-               hsqldb.jar
+               hsqldb.jar,\
+               plugin.properties,\
+               plugin_de.properties
 jars.compile.order = .
 source.. = src
 output..=bin
