--- a/ch.jester.db.hsqldb.nl1/build.properties
+++ b/ch.jester.db.hsqldb.nl1/build.properties
@@ -1,4 +1,11 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.properties,\
+               plugin_de.properties
+jars.compile.order = .
+bin.excludes = META-INF/.svn/
+src.includes = plugin.properties,\
+               plugin_de.properties,\
+               META-INF/MANIFEST.MF
