--- a/trunk/ch.jester.rcpapplication.nl1/build.properties
+++ b/trunk/ch.jester.rcpapplication.nl1/build.properties
@@ -1,4 +1,10 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.properties,\
+               plugin_de.properties
+jars.compile.order = .
+src.includes = plugin_de.properties,\
+               plugin.properties,\
+               META-INF/MANIFEST.MF
