Persistent Services MultiJob fähig

--- a/ch.jester.db.persister.impl/build.properties
+++ b/ch.jester.db.persister.impl/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/IPlayerPersister.xml
+               OSGI-INF/PersisterFactoryComponent.xml,\
+               plugin.xml
 source.. = src/
