--- a/ch.jester.db.persister.impl/build.properties
+++ b/ch.jester.db.persister.impl/build.properties
@@ -1,6 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/PersisterFactoryComponent.xml,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 source.. = src/
