--- a/trunk/ch.jester.orm/plugin.xml
+++ b/trunk/ch.jester.orm/plugin.xml
@@ -2,5 +2,19 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="Configuration" name="HibernateConfiguration" schema="schema/Configuration.exsd"/>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="ch.jester.orm.DBPreferenceInitializer">
+      </initializer>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="ch.jester.orm.DatabasePreferencePage"
+            id="ch.jester.orm.dbPrefPage"
+            name="%Database">
+      </page>
+   </extension>
 
 </plugin>
