--- a/trunk/ch.jester.rcpapplication.nl1/build.properties
+++ b/trunk/ch.jester.rcpapplication.nl1/build.properties
@@ -3,8 +3,13 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.properties,\
-               plugin_de.properties
+               plugin_de.properties,\
+               plugin_fr.properties,\
+               bin/
 jars.compile.order = .
 src.includes = plugin_de.properties,\
                plugin.properties,\
-               META-INF/MANIFEST.MF
+               META-INF/MANIFEST.MF,\
+               plugin_fr.properties,\
+               src/ch/
+bin.excludes = bin/.svn/
