--- a/trunk/ch.jester.rcpapplication/build.properties
+++ b/trunk/ch.jester.rcpapplication/build.properties
@@ -7,4 +7,7 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                plugin_customization.ini,\
                plugin_de.properties,\
-               plugin.properties
+               plugin.properties,\
+               jester.ico,\
+               jester.icns,\
+               icon.xpm
