--- a/ch.jester.db.hsqldb.nl1/build.properties
+++ b/ch.jester.db.hsqldb.nl1/build.properties
@@ -3,9 +3,11 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.properties,\
-               plugin_de.properties
+               plugin_de.properties,\
+               plugin_fr.properties
 jars.compile.order = .
 bin.excludes = META-INF/.svn/
 src.includes = plugin.properties,\
                plugin_de.properties,\
-               META-INF/MANIFEST.MF
+               META-INF/MANIFEST.MF,\
+               plugin_fr.properties
