slf4j <-> log4j bridge für hibernate --> schönere Messages

--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -12,13 +12,12 @@ bin.includes = META-INF/,\
                javassist-3.12.0.GA.jar,\
                jbosscache-core-3.2.1.GA.jar,\
                jta-1.1.jar,\
-               log4j-1.2.14.jar,\
                oscache-2.1.jar,\
                proxool-0.8.3.jar,\
-               slf4j-api-1.6.1.jar,\
-               slf4j-jdk14-1.6.1.jar,\
                swarmcache-1.0RC2.jar,\
-               src/
+               src/,\
+               slf4j-api-1.6.1.jar,\
+               slf4j-log4j12-1.6.1.jar
 jars.compile.order = .
 source.. = src
 output..=bin
