--- a/ch.jester.log4jproperies/build.properties
+++ b/ch.jester.log4jproperies/build.properties
@@ -2,4 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               log4j.properties
+               src/log4j.properties
