--- a/ch.jester.hibernate/.classpath
+++ b/ch.jester.hibernate/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="slf4j-log4j12-1.6.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="slf4j-api-1.6.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
@@ -16,11 +18,8 @@
 	<classpathentry exported="true" kind="lib" path="javassist-3.12.0.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="jbosscache-core-3.2.1.GA.jar"/>
 	<classpathentry exported="true" kind="lib" path="jta-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="log4j-1.2.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="oscache-2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="proxool-0.8.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="slf4j-api-1.6.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="slf4j-jdk14-1.6.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="swarmcache-1.0RC2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
