div Updates/Bugfixes

--- a/ch.jester.log4jproperies/src/log4j.properties
+++ b/ch.jester.log4jproperies/src/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-2p %x - %m [%t - %
 log4j.logger.ch.jester=debug
 
 # hibernate
-log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate=error
