- Alle Properties feuern für Player; queries sortiert nach name, vorname - Filter Feld umgebaut 1) Feld wird per ExtensionPoint in die Toolbar gehängt, 2) neuer extensionpoint ch.jester.commonservices.api.filter (so dass, id von Feld in Toolbar == id von Filter, wird filter ausgeführt)

--- a/ch.jester.commonservices.api/plugin.xml
+++ b/ch.jester.commonservices.api/plugin.xml
@@ -2,5 +2,6 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="ImportHandler" name="ImportHandler" schema="schema/ImportHandler.exsd"/>
+   <extension-point id="Filter" name="Filter" schema="schema/Filter.exsd"/>
 
 </plugin>
