Feature für Systeme

--- a/ch.jester.system.pairing.impl/build.properties
+++ b/ch.jester.system.pairing.impl/build.properties
@@ -1,10 +1,8 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/IPairingManagerProvider.xml,\
-               OSGI-INF/IEloCalculatorManagerProvider.xml,\
-               OSGI-INF/IRankingSystemManagerProvider.xml,\
-               bin/
+               bin/,\
+               OSGI-INF/
 source.. = src/
 bin.excludes = bin/.svn/,\
                bin/ch/.svn/,\
